# skate-area-battle-game

./: .gitignore  README.md  go.mod  go.sum  rule.md  status.md  v1_v1_00001.json  v1_v1_00002.json  v1_v1_00003.json
.github/workflows/: build.yml
cmd/battle-offline/: main.go
cmd/skate-battle/: main.go
cmd/sneuaiolake_train/: main.go
docs/: game_visualizer.js  index.html
pkg/ai/monntplusa/: cnn_nn.go  cnn_weights.go  monntplusa.go
pkg/ai/montplusa/: montplusa.go
pkg/ai/montplusai/: montplusai.go
pkg/ai/random/: random.go
pkg/ai/sneuaiolake/: ai.go  mcts.go  model.onnx  models.go  sneuaiolake.go  training.go
pkg/ai/sneuaiolake/networks/: init.go  v2.go  v4.go  v5.go  v6.go  v7.go  v8.go  v9.go
pkg/ai/sneuaiolake/trainer/: .gitignore  README.md  batch_self_play.py  batch_train.py  get_stats.py  model.keras  model.onnx  play.py  requirements.txt  self_play.py  train.py  v13_v4_00001.json
pkg/ai/sneuaiolake/trainer/.devcontainer/: Dockerfile  devcontainer.json
pkg/ai/sneuaiolake/trainer/game/: Cargo.toml
pkg/ai/sneuaiolake/trainer/game/src/: game.rs
pkg/ai/sneuaiolake/trainer/game/src/ai/: mod.rs  montplusa.rs  random.rs  sneuaiolake.rs  statiolake.rs  trivial.rs
pkg/ai/sneuaiolake/trainer/models_01/: v1.onnx  v10.onnx  v11.onnx  v12.onnx  v13.onnx  v14.onnx  (+22 more)
pkg/ai/staiolake/: staiolake.go
pkg/ai/statiolake/: statiolake.go
pkg/ai/trivial/: trivial.go
pkg/game/: ai.go  runner.go  state.go
pkg/game/debug/: debug.go  debug_js.go
train/: export_cnn_go.py  export_serving_model.py  game_state.py  pv_model.py  self_play.py  train.py
(+6 files in other folders)
