[package]
name = "skate_area_battle_game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
itertools = "0.14.0"
ndarray = "0.15.0"
ort = "1.16.3"
rand = "0.9.1"
rand_xorshift = "0.4.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
